added user screen + api

--- a/code/frontend/src/app/views/sidebar/sidebar.html
+++ b/code/frontend/src/app/views/sidebar/sidebar.html
@@ -1,6 +1,10 @@
 <div class="sidebar">
   <div class="sidebar-header">
-    <h2 class="logo">Painel</h2>
+    <h2 class="logo">
+      <a href="#">
+        <img src="./img/logo.png" width="200px"/>
+      </a>
+    </h2>
   </div>
 
   <nav class="sidebar-nav">
