update whatsapp message sender

--- a/code/frontend/src/app/pages/home/home.html
+++ b/code/frontend/src/app/pages/home/home.html
@@ -1,8 +1,8 @@
 <div class="page-container">
-  <div class="page-header">
-    <h1>Dashboard Principal</h1>
-    <p>Bem-vindo ao seu painel de controle</p>
-  </div>
+  <pagetitle
+    title="Dashboard"
+    subtitle="Bem-Vindo ao seu painel de controle"
+  ></pagetitle>
 
   <div class="stats-grid">
     <div class="stat-card" *ngFor="let stat of stats">
