--- a/code/frontend/src/app/pages/user-management/user-management.scss
+++ b/code/frontend/src/app/pages/user-management/user-management.scss
@@ -31,7 +31,7 @@
 
 .search-filters {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   gap: 12px;
   flex: 1;
 }
@@ -73,6 +73,7 @@
   font-size: 14px;
   background: white;
   cursor: pointer;
+  width: 230px;
 }
 
 .btn-primary {
