--- a/code/frontend/src/app/pages/user-management/user-management.html
+++ b/code/frontend/src/app/pages/user-management/user-management.html
@@ -1,8 +1,8 @@
 <div class="page-container">
-  <div class="page-header">
-    <h1>Gerenciamento de Usuários</h1>
-    <p>Crie, edite e gerencie usuários do sistema</p>
-  </div>
+  <pagetitle
+    title="Gerenciamento de Usuários"
+    subtitle="Crie, edite e gerencie usuários do sistema"
+  ></pagetitle>
 
   <div class="actions-bar">
     <div class="search-filters">
