--- a/code/frontend/src/app/pages/whatsapp/whatsapp.html
+++ b/code/frontend/src/app/pages/whatsapp/whatsapp.html
@@ -109,7 +109,7 @@
       </div>
 
       <div class="composer-body" *ngIf="selectedRecipient">
-        <div class="message-history">
+        <!-- <div class="message-history">
           <div
             class="message-bubble"
             *ngFor="let message of getMessagesForRecipient()"
@@ -121,7 +121,7 @@
               <span class="message-status">{{ getStatusIcon(message.status) }}</span>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="message-input-area">
           <!-- <div class="message-type-selector">
