--- a/code/frontend/src/app/pages/whatsapp/whatsapp.html
+++ b/code/frontend/src/app/pages/whatsapp/whatsapp.html
@@ -1,7 +1,7 @@
 <div class="page-container">
   <pagetitle
     title="WhatsApp Business"
-    subtitle=""
+    subtitle="Envio de mensagens para grupos e pessoas via whatsapp"
   ></pagetitle>
 
   <div class="whatsapp-layout">
