--- a/code/frontend/src/app/pages/appointments/appointments.html
+++ b/code/frontend/src/app/pages/appointments/appointments.html
@@ -35,14 +35,14 @@
       </div>
     </div>
 
-    <div class="project-card add-project">
-      <button class="btn-primary" (click)="openUserModal()">+ Novo Usuário</button>
-      <!-- <div class="add-project-content">
+    <button class="btn-primary" (click)="openUserModal()">+ Novo Agendamento</button>
+    <!--<div class="project-card add-project">
+      <div class="add-project-content">
         <div class="add-icon">+</div>
         <h3>Novo Projeto</h3>
         <p>Clique aqui para criar um novo projeto</p>
-      </div> -->
-    </div>
+      </div> 
+    </div>-->
 
     <!-- User Modal -->
     <div class="modal-overlay" *ngIf="showUserModal" (click)="closeUserModal()">
@@ -52,7 +52,7 @@
           <button class="btn-close" (click)="closeUserModal()">×</button>
         </div>
 
-        <form class="modal-body" (ngSubmit)="saveUser()">
+        <form class="modal-body" (ngSubmit)="save()">
           <div class="form-grid">
             <div class="form-group">
               <label>Nome do Job</label>
@@ -76,6 +76,27 @@
                 required
               />
             </div>
+            
+            <div class="form-group">
+              <label>Enviar Para o Grupo(s):</label>
+              <ul>
+                @for (group of groups; track group.id) {
+                  <li>
+                    <label>
+                      <input 
+                        type="checkbox" 
+                        [(ngModel)]="group.selected"
+                        (change)="handleCheckboxChange(group)"
+                        [value]="true"
+                      >
+                      {{ group.name }} 
+                    </label>
+                  </li>
+                } @empty {
+                  <li>Nenhum grupo na lista para checar.</li>
+                }
+              </ul>
+            </div>
 
             <div class="form-group">
               <label>Ativo para envio?</label>
@@ -85,8 +106,8 @@
                 class="form-control"
                 required
               >
-                <option [value]="true">Ligado</option>
-                <option [value]="false">Desligado</option>
+                <option [value]="true">Sim</option>
+                <option [value]="false">Não</option>
               </select>
             </div>
 
@@ -98,8 +119,8 @@
                 class="form-control"
                 required
               >
-                <option [value]="true">Ligado</option>
-                <option [value]="false">Desligado</option>
+                <option [value]="true">Sim</option>
+                <option [value]="false">Não</option>
               </select>
             </div>
 
@@ -122,26 +143,15 @@
                 class="form-control"
               />
             </div>
-
           </div>
-
-          <!-- <div class="permissions-section" *ngIf="currentUser.role">
-            <h4>Permissões</h4>
-            <div class="permissions-grid">
-              <label class="permission-item" *ngFor="let permission of getPermissionsForRole(currentUser.role)">
-                <input type="checkbox" [checked]="true" disabled />
-                <span>{{ permission }}</span>
-              </label>
-            </div>
-          </div> -->
         </form>
 
         <div class="modal-footer">
           <button type="button" class="btn-secondary" (click)="closeUserModal()">
             Cancelar
           </button>
-          <button type="button" class="btn-primary" (click)="saveUser()">
-            {{ isEditing ? 'Salvar Alterações' : 'Criar Usuário' }}
+          <button type="button" class="btn-primary" (click)="save()">
+            {{ isEditing ? 'Salvar Alterações' : 'Criar Agendamento' }}
           </button>
         </div>
       </div>
